set height with js : avoid wrong height on mobile navigators

--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -17,7 +17,6 @@
 
 body {
   @include flexed-column;
-  height: 100vh;
   main {
     @include x-y-centered;
     flex-grow: 1;
